# alpha-forge-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
.github/workflows/: publish.yml
src/alpha_forge_mcp/: __init__.py  __main__.py  envelope.py  errors.py  forge_client.py  server.py
tests/: test_capabilities.py  test_dx_polish.py  test_error_envelope.py  test_forge_client.py  test_input_schema.py  test_server.py  test_summary_trimming.py
